@@ -33,14 +33,14 @@ public class TypicalPersons {
     public static final Person ALICE = new PersonBuilder().withName("Alice Pauline")
             .withAddress("123, Jurong West Ave 6, #08-111")
             .withPhone("94351253").withNric("Txxxx123A")
-            .withDuty(List.of(LocalDate.of(2025, 1, 10),
-                LocalDate.of(2025, 3, 11)))
+            .withDuty(new ArrayList<>(Arrays.asList(LocalDate.of(2025, 1, 10),
+                LocalDate.of(2025, 3, 11), LocalDate.of(2025, 3, 19))))
             .withSalary("800").withCompany("Support").withRank("3SG")
             .build();
     public static final Person BENSON = new PersonBuilder().withName("Benson Meier")
             .withAddress("311, Clementi Ave 2, #02-25")
             .withPhone("98765432").withNric("Txxxx123B")
-            .withDuty(List.of(LocalDate.of(2025, 3, 10)))
+            .withDuty(new ArrayList<>(Arrays.asList(LocalDate.of(2025, 3, 10))))
             .withSalary("1500").withCompany("HQ").withRank("CPT")
             .build();
     public static final Person CARL = new PersonBuilder().withName("Carl Kurz")
@@ -52,25 +52,25 @@ public class TypicalPersons {
     public static final Person DANIEL = new PersonBuilder().withName("Daniel Meier")
             .withPhone("87652533")
             .withAddress("10th street").withNric("Txxxx123D")
-            .withDuty(List.of(LocalDate.of(2025, 3, 11)))
+            .withDuty(new ArrayList<>(Arrays.asList(LocalDate.of(2025, 3, 11))))
             .withSalary("2000").withCompany("Alpha").withRank("LTA")
             .build();
     public static final Person ELLE = new PersonBuilder().withName("Elle Meyer")
             .withPhone("9482224")
             .withAddress("michegan ave").withNric("Txxxx123E")
-            .withDuty(List.of(LocalDate.of(2025, 1, 5)))
+            .withDuty(new ArrayList<>(Arrays.asList(LocalDate.of(2025, 1, 5))))
             .withSalary("1300").withCompany("Charlie").withRank("COL")
             .build();
     public static final Person FIONA = new PersonBuilder().withName("Fiona Kunz")
             .withPhone("9482427")
             .withAddress("little tokyo").withNric("Txxxx123F")
-            .withDuty(List.of(LocalDate.of(2025, 4, 3)))
+            .withDuty(new ArrayList<>(Arrays.asList(LocalDate.of(2025, 4, 3))))
             .withSalary("1700").withCompany("Charlie").withRank("CWO")
             .build();
     public static final Person GEORGE = new PersonBuilder().withName("George Best")
             .withPhone("9482442")
             .withAddress("4th street").withNric("Txxxx123G")
-            .withDuty(List.of(LocalDate.of(2025, 2, 5)))
+            .withDuty(new ArrayList<>(Arrays.asList(LocalDate.of(2025, 2, 5))))
             .withSalary("600").withCompany("Bravo").withRank("REC")
             .build();
 
@@ -78,13 +78,13 @@ public class TypicalPersons {
     public static final Person HOON = new PersonBuilder().withName("Hoon Meier")
             .withPhone("8482424")
             .withAddress("little india").withNric("Txxxx123H")
-            .withDuty(List.of(LocalDate.of(2025, 2, 1)))
+            .withDuty(new ArrayList<>(Arrays.asList(LocalDate.of(2025, 2, 1))))
             .withSalary("1300").withCompany("Charlie").withRank("3SG")
             .build();
     public static final Person IDA = new PersonBuilder().withName("Ida Mueller")
             .withPhone("8482131")
             .withAddress("chicago ave").withNric("Txxxx123I")
-            .withDuty(List.of(LocalDate.of(2025, 2, 2)))
+            .withDuty(new ArrayList<>(Arrays.asList(LocalDate.of(2025, 2, 2))))
             .withSalary("1400").withCompany("HQ").withRank("LTA")
             .build();
 
